# findword

./: .dockerignore  .env.example  .gitattributes  .gitignore  .jupytext.yml  DEPLOYMENT.md  Dockerfile  PLAN.md  README.md  docker-compose.yml  docker-entrypoint.sh  jupytext.toml  justfile  manage.py  nginx.conf  pyproject.toml
data/fasttext/: README.md
play/: 01_test_fasttext.ipynb  01_test_fasttext.py  02_embed_words.ipynb  02_embed_words.py  03_tsne_viz.ipynb  03_tsne_viz.py
scripts/: download_fasttext_model.sh  execute_and_convert.py
src/core/: settings.py  urls.py
src/findword_api/: admin.py  apps.py  models.py  serializers.py  similarity.py  tests.py  urls.py  views.py
src/findword_api/management/commands/: loadwords.py
src/findword_api/migrations/: 0001_initial.py
src/findword_api/templates/findword_api/: base.html  index.html
temp/: classify_words.py  extract_words.py  generate_embeddings.py  words_classified.csv
temp/raw_words/: README.md  pos=noun,lang=en,length=3.txt  pos=noun,lang=en,length=4.txt  pos=noun,lang=en,length=8.txt  pos=verb,lang=en,length=3.txt  pos=verb,lang=en,length=4.txt  pos=verb,lang=en,length=5.txt  pos=verb,lang=en,length=6.txt  pos=verb,lang=en,length=7.txt  pos=verb,lang=en,length=8.txt
